# syne

./: .env.example  .gitignore  Dockerfile  INSTALL.md  LICENSE  README.md  RELEASE_NOTES_v1.13.8.md  SECURITY.md  docker-compose.yml  install-node.sh  install.sh  patch_manage_user.py  pyproject.toml  rollback.sh  syne-setup.sh  update.sh  update_manage_user_handler.py
docs/: index.html
syne/: __init__.py  agent.py  agent.py.backup  agent.py.bak  boot.py  cli.py  compaction.py  config.py  config_guide.py  consent.py  context.py  conversation.py  formatting.py  inbound.py  main.py  migrate_credentials.py  ratelimit.py  rule_checker.py  scheduler.py  security.py  shell_exec.py  shell_guard.py  subagent.py  system_guide.py  update_checker.py
syne/abilities/: base.py  (+15 more)
tests/: conftest.py  test_abilities.py  test_abilities_loader.py  test_ability_first_cache.py  test_anthropic_sanitize.py  test_boot.py  test_classify_error.py  test_cli_backup.py  test_cli_init.py  test_cli_shared.py  test_compaction.py  test_consent.py  test_context.py  test_conversation.py  test_conversation_remote.py  test_engine.py  test_evaluator.py  test_exec_pty.py  test_file_ops.py  test_formatting.py  test_gateway_auth.py  test_gateway_protocol.py  test_gateway_server.py  test_google_tools.py  test_graph.py  test_groups.py  test_helpers_schema.py  test_history_search.py  test_memory.py  test_models.py  test_node_client.py  test_node_executor.py  test_ollama.py  test_outbound.py  test_phantom_regex.py  test_provider.py  test_reactions.py  test_read_source.py  test_registry.py  test_rule_checker.py  (+9 more)
(+77 files in other folders)
