[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "syne-agent"
version = "0.12.3"
description = "AI Agent Framework with Unlimited Memory"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Riyogarta Pratikto", email = "riyo@surelden.com" },
]
keywords = ["ai", "agent", "memory", "postgresql", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0",
    "pgvector>=0.3.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-telegram-bot>=21.0",
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "croniter>=2.0",
    "prompt_toolkit>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
syne = "syne.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["syne"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
